Changed colors and classes for color bars

--- a/sample.html
+++ b/sample.html
@@ -15,7 +15,7 @@
     <div class="row top">
       <!--Row of colors at the top of the page-->
       <div class="col-md-1 red top"></div>
-      <div class="col-md-1 green top"></div>
+      <div class="col-md-1 blue top"></div>
       <div class="col-md-1 orange top"></div>
       <div class="col-md-1 purple top"></div>
     </div>
@@ -25,7 +25,7 @@
 
     <div class="row">
       <!--Row with the title of the Sushi Card-->
-      <div class="col-md-4 title blue">
+      <div class="col-md-4 title">
         SUSHI TITLE
       </div>
     </div>
@@ -109,7 +109,7 @@
       <div class="row bottom bottom-row">
         <!--Row of colors at the bottom of the page-->
         <div class="col-md-1 red"></div>
-        <div class="col-md-1 green"></div>
+        <div class="col-md-1 blue"></div>
         <div class="col-md-1 orange"></div>
         <div class="col-md-1 purple"></div>
       </div>
@@ -126,3 +126,5 @@
 </body>
 
 </html>
+
+<!--https://company-51033.frontify.com/d/E6KNDhunr9mR/coderdojo-style-guide-1460385526#/branding/coderdojo-brand/name-->
