--- a/sample.html
+++ b/sample.html
@@ -106,13 +106,13 @@
       </br>
 
 
-      <div class="row bottom bottom-row">
+      <footer class="row bottom bottom-row">
         <!--Row of colors at the bottom of the page-->
         <div class="col-md-1 red"></div>
         <div class="col-md-1 blue"></div>
         <div class="col-md-1 orange"></div>
         <div class="col-md-1 purple"></div>
-      </div>
+      </footer>
       <!--End of row-->
 
 
